--- a/show-app/package.json
+++ b/show-app/package.json
@@ -2,6 +2,12 @@
   "name": "show-app",
   "version": "0.1.0",
   "private": true,
+  
+  "engines":{
+    "node": "12.13.0",
+    "npm": "6.12.0"
+  },
+
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -15,7 +21,8 @@
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-spring": "^8.0.27"
   },
   "scripts": {
     "start": "react-app-rewired start",
