--- a/show-app/package.json
+++ b/show-app/package.json
@@ -19,7 +19,7 @@
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "react-spring": "^8.0.27"
   },
   "scripts": {
